Atualização do Código highlights.html

--- a/highlights.html
+++ b/highlights.html
@@ -214,8 +214,8 @@
           <iframe
             width="853"
             height="480"
-            src="https://www.youtube.com/embed/AkTWdV6zIYI"
-            title="Gabriel Medina 🆚 Kanoa Igarashi | Men&#39;s Semi-Finals Heat 1 | Tokyo 2020"
+            src="https://www.youtube.com/embed/87Qqyw8OTa8"
+            title="Melhores Momentos Surfe do GABRIEL MEDINA 🏄‍♂️ | #Paris2024"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin"
