--- a/highlights.html
+++ b/highlights.html
@@ -239,6 +239,7 @@
           viralizou, mostrando o atleta aparentemente “caminhando nas nuvens”,
           reforçando ainda mais seu status de estrela global do surfe.
         </p>
+        <img src="img/iconica.jpeg">
       </div>
     </main>
 
