--- a/achievements.html
+++ b/achievements.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Medina, Gabriel, Surf, Olímpiadas" />
     <meta name="autor" content="Kelvin Palka" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="refresh" content="300" />
+    <meta http-equiv="refresh" content="20000" />
     <link rel="icon" type="image/jpg" href="img/Logo.jpg" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -33,80 +33,155 @@
     </div>
 
     <main>
-      <div class="teaser">
-        <h1>Gabriel Medina: O Poseidon Brasileiro</h1>
+      <div class="text">
+        <h1>Trouféus, Medalhas e Títulos</h1>
         <p>
-          Gabriel Medina é muito mais que um surfista de destaque mundial – ele
-          é um ícone do esporte, uma inspiração para milhões e o pioneiro de uma
-          nova era do surfe brasileiro. Conheça sua trajetória, conquistas e
-          legado que transformaram o surfe global.
+          Nesta secção você encontra uma tabela com os principais prêmios e
+          conquistas de Gabriel Medina, confira os destaques do atetla e as
+          condecorações que o surfista recebeu. Atente-se de que estes são só
+          alguns dos prêmios, pois o surfista já recebeu muitos deles.
         </p>
       </div>
-      <section class="invites">
-        <div class="teaser-about">
-          <h2>Quem é?</h2>
-          <p>
-            Nascido em Maresias, São Paulo, Gabriel Medina começou a surfar
-            ainda jovem e rapidamente se destacou por sua habilidade e
-            dedicação. Hoje, ele é tricampeão mundial de surfe e um dos maiores
-            atletas da história do esporte.
-          </p>
-          <button href="about.html">Saiba mais</button>
-        </div>
-        <div class="teaser-achievements">
-          <h2>Conquistas</h2>
-          <ul class="marcador">
-            <li>Tricampeão Mundial de Surfe (2014, 2018, 2021)</li>
-            <li>Primeiro brasileiro a vencer o campeonato mundial</li>
-            <li>Bronze nas Olímpiadas de Paris - 2024</li>
-          </ul>
-          <button href="achievements.html">Conquistas</button>
-        </div>
-        <div class="teaser-highlight">
-          <h2>Medina Fora das Ondas</h2>
-          <p>
-            Além de suas vitórias no mar, Gabriel também é conhecido por seu
-            trabalho social através do Instituto Gabriel Medina, onde forma
-            novos talentos do surfe e oferece oportunidades para jovens de baixa
-            renda.
-          </p>
-          <button href="achievements.html">Destaques</button>
-        </div>
-        <div class="teaser-curiosity">
-          <h2>Você Sabia?</h2>
-          <p>
-            Você sabia que Gabriel Medina começou a surfar com apenas 9 anos de
-            idade e ganhou seu primeiro campeonato profissional aos 14?
-          </p>
-          <button href="curiosity.html">Curisosidades</button>
-        </div>
-      </section>
-      <div class="quote">
-        <p>
-          "Eu sempre sonhei em ser campeão mundial. Eu nunca desisti desse
-          sonho, e é isso que eu quero passar para todos os jovens que também
-          têm sonhos grandes."
-        </p>
-        <h3>- Gabriel Medina, 2014</h3>
-      </div>
-    </main>
-
-    <a href="#top" class="back-to-top">
+      <table>
+        <thead>
+          <tr>
+            <th>Prêmio/Conquista</th>
+            <th>Ano</th>
+            <th>Foto</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Campeão Mundial da WSL</td>
+            <td>2014</td>
+            <td>
+              <img
+                src="img/wsl.png"
+                alt="Campeão Mundial da WSL"
+                width="50"
+                height="50"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Quiksilver Pro Gold Coast</td>
+            <td>2014</td>
+            <td>
+              <img
+                src="img/qpgc.png"
+                alt="Quiksilver Pro Gold Coast"
+                width="50"
+                height="50"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Billabong Pro Tahiti</td>
+            <td>2014</td>
+            <td>
+              <img
+                src="img/billa.png"
+                alt="Billabong Pro Rio"
+                width="50"
+                height="50"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Troféu de Melhor Surfista do Ano</td>
+            <td>2014</td>
+            <td>
+              <img
+                src="img/twsl.png"
+                alt="Melhor Surfista do Ano"
+                width="50"
+                height="50"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Fiji Pro</td>
+            <td>2014</td>
+            <td>
+              <img src="img/fp.png" alt="Fiji Pro" width="50" height="50" />
+            </td>
+          </tr>
+          <tr>
+            <td>Quiksilver Pro France</td>
+            <td>2015</td>
+            <td>
+              <img src="img/qpf.png"Quiksilver Pro France" width="50"
+              height="50">
+            </td>
+          </tr>
+          <tr>
+            <td>Campeão Mundial da WSL</td>
+            <td>2018</td>
+            <td>
+              <img
+                src="img/wsl.png"
+                alt="Campeão Mundial da WSL"
+                width="50"
+                height="50"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Troféu de Melhor Surfista do Ano</td>
+            <td>2018</td>
+            <td>
+              <img
+                src="img/twsl.png"
+                alt="Melhor Surfista do Ano"
+                width="50"
+                height="50"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Troféu de Melhor Surfista do Ano</td>
+            <td>2021</td>
+            <td>
+              <img
+                src="img/wsl.png"
+                alt="Melhor Surfista do Ano"
+                width="50"
+                height="50"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>Medalha de Bronze nos Jogos Olímpicos de Paris</td>
+            <td>2024</td>
+            <td>
+              <img
+                src="img/olimpiadas.png"
+                alt="Medalha de Bronze nos Jogos Olímpicos de Paris"
+                width="50"
+                height="50"
+              />
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <a href="#top" class="back-to-top">
         <img src="img/prancha.png" alt="Voltar ao topo" />
       </a>
-  
-      <script src="js.js"></script>
+    </main>
 
-      <footer>
-        <div class="waves">
-          <div class="wave" id="wave1"></div>
-          <div class="wave" id="wave2"></div>
-          <div class="wave" id="wave3"></div>
-          <div class="wave" id="wave4"></div>
-        </div>
-  
-        <p>Kelvin Palka 2024 - &copyTodos os direitos reservados</p>
-        <p>Trabalho Acadêmico sem Fins Lucrativos</p>
-      </footer>
+
+    <script src="js.js"></script>
+
+    <footer>
+      <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
+      </div>
+
+      <p>Kelvin Palka 2024 - &copyTodos os direitos reservados</p>
+      <p>Trabalho Acadêmico sem Fins Lucrativos</p>
+    </footer>
   </body>
 </html>
