--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contato - Gabriel Medina</title>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Site acadêmico sem fins lucrativos, apresentando dados gerias sobre o atletla brasileiro Gabriel Medina"
+    />
+    <meta name="keywords" content="Medina, Gabriel, Surf, Olímpiadas" />
+    <meta name="autor" content="Kelvin Palka" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="refresh" content="100000" />
     <link rel="icon" type="image/jpg" href="img/Logo.jpg" />
     <link rel="stylesheet" href="style.css" />
   </head>
