--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta name="autor" content="Kelvin Palka" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="refresh" content="100000" />
+    <meta property="og:title" content="Gabriel Medina" />
+    <meta property="og:description" content="Site acadêmico sem fins lucrativos, apresentando dados gerais sobre o atleta brasileiro Gabriel Medina." />
+    <meta property="og:image" content="img/preview.png" />
+    <meta property="og:url" content="https://kelvinpalka.github.io/gabriel-medina/" /> 
+    <meta property="og:type" content="website" />
     <link rel="icon" type="image/jpg" href="img/Logo.jpg" />
     <link rel="stylesheet" href="style.css" />
   </head>
